--- a/src/components/ArticleModal/ArticleModal.module.scss
+++ b/src/components/ArticleModal/ArticleModal.module.scss
@@ -23,6 +23,10 @@
 		display: flex;
 		flex-direction: row;
 
+		@media (max-width: 1280px) {
+			width: 80%;
+		}
+
 		@media (max-width: 760px) {
 			width: 100%;
 			height: 100%;
